@@ -11,8 +11,8 @@
 
 /* The following are disabled to make the dhrystone test more authentic.
  */
-#define _SDCC_PORT_PROVIDES_MEMCPY	1
-#define _SDCC_PORT_PROVIDES_STRCMP	1
+#define _SDCC_PORT_PROVIDES_MEMCPY	0
+#define _SDCC_PORT_PROVIDES_STRCMP	0
 /* Register allocator is as good as hand coded asm.  Cool. */
 #define _SDCC_PORT_PROVIDES_STRCPY	0
 
